test: add missing tests